📝💄🐛 [docs] fix github icon in dark mode

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,1 +1,5 @@
 @import "~vuepress-theme-yuu/styles/variables.styl"
+
+body.yuu-theme-dark .github-icon {
+    filter: invert(1);
+}
